// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPopoverFooter is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPopoverFooter testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPopoverFooter props paddingSize l is rendered 1`] = `
<div
  class="ouiPopoverFooter ouiPopoverFooter--paddingLarge"
/>
`;

exports[`OuiPopoverFooter props paddingSize m is rendered 1`] = `
<div
  class="ouiPopoverFooter ouiPopoverFooter--paddingMedium"
/>
`;

exports[`OuiPopoverFooter props paddingSize none is rendered 1`] = `
<div
  class="ouiPopoverFooter ouiPopoverFooter--paddingNone"
/>
`;

exports[`OuiPopoverFooter props paddingSize s is rendered 1`] = `
<div
  class="ouiPopoverFooter ouiPopoverFooter--paddingSmall"
/>
`;
